src/objects/tinderbox__content__c.object
<CustomObject>
    <fields>
        <fullName>tinderbox__Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipName>TB_Content</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>tinderbox__TBAccount__c</fullName>
        <description>Holds a reference to the Octiv account id for multi-account support. If no id exists then the default account is assumed.</description>
        <externalId>true</externalId>
        <label>Octiv Account ID</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tinderbox__tinderboxid__c</fullName>
        <externalId>true</externalId>
        <label>Octiv ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <label>Octiv Content</label>
    <nameField>
        <label>Octiv Content Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Octiv Content</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>